# Digital-DNA

./: CHANGELOG.md  DDNA_FULL_ANALYSIS.txt  DDNA_FULL_STATE_DUMP.txt  README.md  boot_ddna.py  boot_log.txt  ddna_cycle.ps1  ddna_loop.ps1  pyproject.toml  result.json  run_population.py  sandbox_evolve_log.jsonl  supervisor.py
_backup_pre_D4/: run_backup.py
_backup_pre_allone_20260217_124846/: supervisor.py
_mutations/: README.md
_patch_backups/: README.md
artifacts/: README.md  last_episode.json  last_run.json  replay_k.json
config/: README.md  environments.json  goals.json  policy.json  thresholds.json  weights.json
core_runtime/: README_CORE.txt  generation_controller.py  run.py  run_parallel.py
ddna_evo/: README.md
developer/: README.md  README_genome.md  README_orchestrator.md  README_stability.md  diff.py  module_files.json  module_sensitivity.json  mutation_map.py  rebuild_baseline.py  rebuild_baseline_v2_2.py  write_module_readmes.py
docs/: ARCHITECTURE_EVALUATION.md  CODEX_UPGRADE_LOG.md  README.md  benchmarks.md  ci_gate.md  research_mapping.md
engine/: README.md  bio_signature.py  cli.py  evolution_loop.py  genome.json  policy.py  reporting.py  state.json
genome/: README.md  best_genome.json
interface/: README.md
ledger/: README.md  ddna_ledger.jsonl
logs/: README.md  code_evolution.jsonl  evolution_live.jsonl  mutation_schedule.jsonl  sandbox_self_improve.jsonl  self_evolve_log.jsonl
memory/: README.md  genome.json  phase7_enabled.txt
population/: population.json
rcct_kernel/: README.md
schema/: ddna_record.schema.json
(+402 files in other folders)
